@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display an empty panel by default, to force a decent size.
+Nicolas Weeger 2010-04-17
+
 CRE: display item property in treasure panel.
 Nicolas Weeger 2010-04-16
 
